@@ -52,7 +52,7 @@ module Mutex_m
 	    defined? unlock and
 	    defined? try_lock and
 	    defined? synchronize)
-      Mutex_m.define_aliases(class<<self;self;end)
+      Mutex_m.define_aliases(singleton_class)
     end
     mu_initialize
   end
